feat: Webpack config files are detached according to development mode and production mode.

--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -1,13 +1,14 @@
-@import './variable';
+@import 'variable';
 
 div {
-  &:last-child{
-    background:none;
+  h1 {
+    background: $green;
+    color: white;
   }
-  background: $green;
-  .title{
-    font-size: $fontSize;
-    color: $purple;
-    font-weight: $bold;
+  &.title {
+    font-size: 30px;
+    // font-size: $fontSize;
+    color: purple;
+    // font-weight: $bold;
   }
 }
