--- a/src/assets/scss/main.scss
+++ b/src/assets/scss/main.scss
@@ -3,12 +3,10 @@
 div {
   h1 {
     background: $green;
-    color: white;
   }
   &.title {
-    font-size: 30px;
-    // font-size: $fontSize;
-    color: purple;
-    // font-weight: $bold;
+    font-size: $fontSize;
+    color: $purple;
+    font-weight: $bold;
   }
 }
