fix: didn't working scss and change eslint file format

--- a/src/styles/_scaffolding.scss
+++ b/src/styles/_scaffolding.scss
@@ -1,10 +1,9 @@
 html {
-  max-width: $page-width;
   line-height: 1.4;
-  font-size: $font-size;
-  background: $background-color;
-  color: $font-color;
-  font-family: $font-family;
+  font-size: 10px;
+  background: $backgroundColor;
+  color: $fontColor;
+  font-family: $fontFamily;
 }
 
 body {
@@ -12,17 +11,14 @@ body {
   margin: 0;
 }
 
-#root {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-  align-self: center;
-}
-
 h1 {
   max-width: 90vw;
   margin: auto;
   text-align: center;
+}
+
+div {
+  &.title {
+    font-size: $fontSize;
+  }
 }
