--- a/src/styles/_variable.scss
+++ b/src/styles/_variable.scss
@@ -1,5 +1,4 @@
-$font-size: 1rem;
-$font-family: 'Inter', sans-serif;
-$background-color: #121212;
-$font-color: #dae0e0;
-$page-width: 650px;
+$fontSize: 1.8rem;
+$fontFamily: 'Inter', sans-serif;
+$backgroundColor: #121212;
+$fontColor: #dae0e0;
