--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -1,9 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Comforter&family=Quicksand:wght@300;500&family=Work+Sans:wght@200&display=swap');
+
 $font-size: 16px;
 $font-color: white;
 
 html {
   font-size: $font-size;
   color: $font-color;
+  font-family: 'Comforter', cursive;
+  font-weight: 300;
 }
 
 body {
